[gd_scene load_steps=4 format=3 uid="uid://bjakwki6g2pik"]

[ext_resource type="Script" path="res://scenes/prostitute_topless.gd" id="1_4haru"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="1_t3ykg"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="2_wxbb7"]

[node name="ProstituteTopless" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4haru")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("1_t3ykg")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("2_wxbb7")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["The red light district is starting to feel less threatening everytime you visit.", "You sit down reflecting on your life in this place.", "Vesper: These last few days I’ve been fondled and rubbed by so many different men that I’ve lost count. ", "Vesper: Something they all had in common was a genuine interest in my tits.", "You roll your blouse up to get a better look at your cleavage.", "Vesper: I never really paid too much attention until recently, but I have really perky tits. ", "Vesper: They seem to make my clients hard all the time.", "Vesper: Josh came in his pants just by pinching my nipples.", "Vesper: Maybe I should be more adventurous? ", "Vesper: I feel so hot, there’s no one around… I could let them out to breathe for a while. ", "Vesper: What if someone sees them again? ", "Vesper: Nobody will come, It’s just for a while, like a dare, 1 minute and I’ll cover them again.", "You look both ways, nobody’s nearby. You take a deep breath and uncover your tits.", "Vesper: It feels nice to let them out. ", "Vesper: Look at my nipples, they are so hard already.", "Vesper: I can’t believe I’m topless in public. Not too long ago I was interviewing the girls here.", "Vesper: Now I look just like a real prostitute with my tits hanging out like this.", "- 5 minutes pass -", "Vesper: Why haven’t I covered them? I shouldn’t be doing this…", "- 20 minutes pass -", "Vesper: I’m not nervous anymore, I even forgot my tits are out.", "- 30 minutes pass - ", "Vesper: Why keep lying to myself? My pussy’s getting wet just thinking about someone catching me like this.", "Soon your wish comes true and a man approaches you, hypnotized looking directly at your boobs.", "Man: What a beautiful pair of tits.", "Vesper: Thanks. They are all yours if you have the money. ", "Vesper: I'll let you pinch them as much as you want, deal?", "Before you know it you’re both in a dark alley; his hands on your tits, your fangs on his neck.", "You drink until you're satisfied.", "Vesper: It worked like a charm. And he made me wet.", "With his wallet in your hand, you leave him lying on the floor.", "-- END OF PROSTITUTON D --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1
